# retrieval-agent-from-scratch

./: .gitignore  README.md  pyproject.toml
docs/: billing.md  refunds.md  subscriptions.md
src/retrieval_agent_from_scratch/: agent.py  cli.py  config.py  knowledge.py  main.py
